@@ -5,6 +5,8 @@
 - extended `index.d.ts` by @Helferino
 - fixed cleaning zombie connections in the FlowStrream
 - added a retry functionality `flowinstance.trigger()` when the FlowStream isn't loaded
+- added `flowstream.strict {Boolean}` property (default: `true`)
+- extended `flowstream.export([type])` by adding type argument
 
 ========================
 0.0.51
